# TNN

./: CMakeLists.txt
examples/android/demo/: CMakeLists.txt  build.gradle
examples/android/demo/src/main/java/com/tencent/tnn/demo/: BenchmarkModel.java  MainActivity.java
examples/android/demo/src/main/jni/cc/: benchmark_model_jni.cc  benchmark_model_jni.h
examples/base/: benchmark_model.cc  benchmark_model.h  tnn_sdk_sample.cc
source/tnn/core/: context.h  default_network.cc  instance.cc  tnn_impl_default.cc
source/tnn/device/opencl/: imagebuffer_convertor.cc  opencl_blob_converter.cc  opencl_context.cc  opencl_context.h  opencl_mat_converter.cc  opencl_runtime.cc  opencl_utils.h
source/tnn/device/opencl/acc/: opencl_layer_acc.cc  opencl_sigmoid_layer_acc.cc  opencl_softmax_layer_acc.cc
source/tnn/device/opencl/acc/convolution/: opencl_conv_layer_1x1_acc.cc  opencl_conv_layer_acc_impl.cc  opencl_conv_layer_acc_impl.h  opencl_conv_layer_common_acc.cc  opencl_conv_layer_common_acc.h  opencl_conv_layer_depthwise_acc.cc  opencl_conv_layer_depthwise_acc.h
source/tnn/device/opencl/cl/: base.inc  buffer_to_image.cl  convolution.cl  convolution_exp.cl  io.inc
source/tnn/device/opencl/cl/codegen/: opencl_program.cc
test/: CMakeLists.txt  benchmark_model_test.cc  benchmark_model_test.h
test/unit_test/layer_test/: test_conv_layer.cc  test_reduce_op_layer.cc
